# intellij

./: WORKSPACE
aspect/: intellij_info_impl.bzl
base/src/com/google/idea/blaze/base/run/state/: RunConfigurationFlagsState.java
examples/go/with_proto/: with_proto.bazelproject
examples/go/with_proto/proto/: BUILD.bazel  translators.go
examples/go/with_proto/proto/embedded/: BUILD.bazel  embedded.proto  placeholder.go
ext/: BUILD
ext/src/com/google/idea/blaze/ext/platform/: IntelliJExtsDefault.java  IntelliJExtsMac.java
intellij_platform_sdk/: build_defs.bzl
