load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "embedded_proto",
    srcs = ["embedded.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "embedded_go_proto",
    importpath = "github.com/bazelbuild/intellij/examples/go/with_proto/proto/embedded",
    proto = ":embedded_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    srcs = ["placeholder.go"],
    embed = [":embedded_go_proto"],
    importpath = "github.com/bazelbuild/intellij/examples/go/with_proto/proto/embedded",
    visibility = ["//visibility:public"],
)
